Add response exception handling in YouTubeDiscordNotifier
The YouTubeDiscordNotifier now includes a catch block for GoogleJsonResponseException to handle instances when the API is unreachable. This also changes the retrieval of the channel name from request.execute().getItems().get(0).getSnippet().getTitle() to request.execute().getItems().getFirst().getSnippet().getTitle().